--- a/includes/medtec.bib
+++ b/includes/medtec.bib
@@ -59,7 +59,7 @@
   volume = {1386},
   number = {1},
   pages = {012113},
-  issn = {1742-6588, 1742-6596},
+  issn = {1742-6588},
   doi = {10.1088/1742-6596/1386/1/012113},
   url = {https://iopscience.iop.org/article/10.1088/1742-6596/1386/1/012113},
   urldate = {2023-10-21},
@@ -297,6 +297,22 @@
   file = {/home/ro/Zotero/storage/DJ2DHK28/Borowicz et al. - 2021 - Ultra-Hypofractionated Proton Therapy in Localized.pdf}
 }
 
+@article{burnetDefiningTumourTarget2004,
+  title = {Defining the Tumour and Target Volumes for Radiotherapy},
+  author = {Burnet, Neil G.},
+  date = {2004},
+  journaltitle = {Cancer Imaging},
+  shortjournal = {Cancer Imaging},
+  volume = {4},
+  number = {2},
+  pages = {153--161},
+  issn = {1470-7330},
+  doi = {10.1102/1470-7330.2004.0054},
+  url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1434601/},
+  urldate = {2024-09-25},
+  file = {/home/ro/Zotero/storage/E6T4J4FU/Burnet - 2004 - Defining the tumour and target volumes for radiotherapy.pdf}
+}
+
 @article{buschRangeguidanceProtonTherapy2022,
   title = {Towards Range-Guidance in Proton Therapy to Detect Organ Motion-Induced Dose Degradations},
   author = {Busch, Kia and Andersen, Andreas Gravgaard and Petersen, Jørgen Breede Baltzer and Petersen, Stine Elleberg and Rønde, Heidi S and Bentzen, Lise Nørgaard and Pilskog, Sara and Skyt, Peter Sandegaard and Nørrevang, Ole and Muren, Ludvig Paul},
@@ -409,6 +425,24 @@
   file = {/home/ro/Zotero/storage/JCRJYS6K/Clark and Badea - 2014 - Micro-CT of rodents State-of-the-art and future perspectives.pdf}
 }
 
+@article{delameMedialSurfaceMesh2012,
+  title = {From {{A Medial Surface To A Mesh}}},
+  author = {Delamé, T. and Roudet, C. and Faudot, D.},
+  date = {2012-08},
+  journaltitle = {Computer Graphics Forum},
+  shortjournal = {Computer Graphics Forum},
+  volume = {31},
+  number = {5},
+  pages = {1637--1646},
+  issn = {0167-7055, 1467-8659},
+  doi = {10.1111/j.1467-8659.2012.03169.x},
+  url = {https://onlinelibrary.wiley.com/doi/10.1111/j.1467-8659.2012.03169.x},
+  urldate = {2024-09-26},
+  abstract = {Abstract             Medial surfaces are well‐known and interesting surface skeletons. As such, they can describe the topology and the geometry of a 3D closed object. The link between an object and its medial surface is also intuitively understood by people. We want to exploit such skeletons to use them in applications like shape creation and shape deformation. For this purpose, we need to define medial surfaces as Shape Representation Models (SRMs). One of the very first task of a SRM is to offer a visualization of the shape it describes. However, achieving this with a medial surface remains a challenging problem.             In this paper, we propose a method to build a mesh that approximates an object only described by a medial surface. To do so, we use a volumetric approach based on the construction of an octree. Then, we mesh the boundary of that octree to get a coarse approximation of the object. Finally, we refine this mesh using an original migration algorithm. Quantitative and qualitative studies, on objects coming from digital modeling and laser scans, shows the efficiency of our method in providing high quality surfaces with a reasonable computational complexity.},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/LM5YN28X/Delamé et al. - 2012 - From A Medial Surface To A Mesh.pdf}
+}
+
 @incollection{denotterHounsfieldUnit2024,
   title = {Hounsfield {{Unit}}},
   booktitle = {{{StatPearls}}},
@@ -452,7 +486,7 @@
   volume = {26},
   number = {3},
   pages = {297--302},
-  issn = {0012-9658, 1939-9170},
+  issn = {0012-9658},
   doi = {10.2307/1932409},
   url = {https://esajournals.onlinelibrary.wiley.com/doi/10.2307/1932409},
   urldate = {2024-02-06},
@@ -827,7 +861,7 @@
   volume = {585},
   number = {7825},
   pages = {357--362},
-  issn = {0028-0836, 1476-4687},
+  issn = {1476-4687},
   doi = {10.1038/s41586-020-2649-2},
   url = {https://www.nature.com/articles/s41586-020-2649-2},
   urldate = {2024-09-21},
@@ -848,21 +882,6 @@
   doi = {10.1016/j.neuroimage.2012.11.048},
   url = {https://linkinghub.elsevier.com/retrieve/pii/S1053811912011603},
   urldate = {2023-10-09},
-  langid = {english}
-}
-
-@article{harrisonVertebralLandmarksIdentification2013a,
-  title = {Vertebral Landmarks for the Identification of Spinal Cord Segments in the Mouse},
-  author = {Harrison, Megan and O'Brien, Aine and Adams, Lucy and Cowin, Gary and Ruitenberg, Marc J. and Sengul, Gulgun and Watson, Charles},
-  date = {2013-03},
-  journaltitle = {NeuroImage},
-  shortjournal = {NeuroImage},
-  volume = {68},
-  pages = {22--29},
-  issn = {10538119},
-  doi = {10.1016/j.neuroimage.2012.11.048},
-  url = {https://linkinghub.elsevier.com/retrieve/pii/S1053811912011603},
-  urldate = {2024-09-24},
   langid = {english}
 }
 
@@ -1054,6 +1073,20 @@
   file = {/home/ro/Zotero/storage/DPMJXU6N/Jensen et al. - 2008 - Tumor volume in subcutaneous mouse xenografts meas.pdf}
 }
 
+@incollection{jeromeSkeletalSystem2018,
+  title = {Skeletal {{System}}},
+  booktitle = {Comparative {{Anatomy}} and {{Histology}}},
+  author = {Jerome, Christopher and Hoch, Benjamin and Carlson, Cathy S.},
+  date = {2018},
+  pages = {67--88},
+  publisher = {Elsevier},
+  doi = {10.1016/B978-0-12-802900-8.00005-1},
+  url = {https://linkinghub.elsevier.com/retrieve/pii/B9780128029008000051},
+  urldate = {2024-09-27},
+  isbn = {978-0-12-802900-8},
+  langid = {english}
+}
+
 @article{jingaAssessingImpact3D2023,
   title = {Assessing the Impact of {{{\textsc{3D}}}} Image Segmentation Workshops on Anatomical Education and Image Interpretation: {{A}} Prospective Pilot Study},
   shorttitle = {Assessing the Impact Of},
@@ -1081,6 +1114,23 @@
   pagetotal = {893},
   keywords = {Computer simulation,Surgery,Surgery Computer-Assisted},
   annotation = {OCLC: ocn889547698}
+}
+
+@article{jungBasicPhysicalPrinciples2021,
+  title = {Basic {{Physical Principles}} and {{Clinical Applications}} of {{Computed Tomography}}},
+  author = {Jung, Haijo},
+  date = {2021-03-31},
+  journaltitle = {Progress in Medical Physics},
+  shortjournal = {Progress in Medical Physics},
+  volume = {32},
+  number = {1},
+  pages = {1--17},
+  issn = {2508-4445, 2508-4453},
+  doi = {10.14316/pmp.2021.32.1.1},
+  url = {http://www.progmedphys.org/journal/view.html?doi=10.14316/pmp.2021.32.1.1},
+  urldate = {2024-09-27},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/YIRKGFYI/Jung - 2021 - Basic Physical Principles and Clinical Applications of Computed Tomography.pdf}
 }
 
 @inproceedings{kashanipourRobustColorClassification2008,
@@ -1164,7 +1214,7 @@
   doi = {10.1007/978-1-4614-7657-3_19},
   url = {http://link.springer.com/10.1007/978-1-4614-7657-3_19},
   urldate = {2023-09-17},
-  isbn = {978-1-4614-7656-6 978-1-4614-7657-3},
+  isbn = {978-1-4614-7656-6},
   langid = {english}
 }
 
@@ -1443,12 +1493,10 @@
   shorttitle = {{{SAMM}} ({{Segment Any Medical Model}})},
   author = {Liu, Yihao and Zhang, Jiaming and She, Zhangcong and Kheradmand, Amir and Armand, Mehran},
   date = {2023},
-  publisher = {arXiv},
   doi = {10.48550/ARXIV.2304.05622},
   url = {https://arxiv.org/abs/2304.05622},
   urldate = {2023-10-21},
   abstract = {The Segment Anything Model (SAM) is a new image segmentation tool trained with the largest available segmentation dataset. The model has demonstrated that, with efficient prompting, it can create high-quality, generalized masks for image segmentation. However, the performance of the model on medical images requires further validation. To assist with the development, assessment, and application of SAM on medical images, we introduce Segment Any Medical Model (SAMM), an extension of SAM on 3D Slicer - an open-source image processing and visualization software extensively used by the medical imaging community. This open-source extension to 3D Slicer and its demonstrations are posted on GitHub (https://github.com/bingogome/samm). SAMM achieves 0.6-second latency of a complete cycle and can infer image masks in nearly real-time.},
-  version = {3},
   keywords = {Computer Vision and Pattern Recognition (cs.CV),FOS: Computer and information sciences,FOS: Electrical engineering electronic engineering information engineering,Image and Video Processing (eess.IV),Machine Learning (cs.LG)}
 }
 
@@ -1551,7 +1599,7 @@
   volume = {37},
   number = {7-8},
   pages = {1003--1009},
-  issn = {1060-0280, 1542-6270},
+  issn = {1060-0280},
   doi = {10.1345/aph.1C449},
   url = {http://journals.sagepub.com/doi/10.1345/aph.1C449},
   urldate = {2024-09-19},
@@ -1677,6 +1725,24 @@
   isbn = {978-0-7695-1900-5}
 }
 
+@incollection{noePartialVolumeSegmentation2001,
+  title = {Partial {{Volume Segmentation}} of {{Cerebral MRI Scans}} with {{Mixture Model Clustering}}},
+  booktitle = {Information {{Processing}} in {{Medical Imaging}}},
+  author = {Noe, Aljaž and Gee, James C.},
+  editor = {Insana, Michael F. and Leahy, Richard M.},
+  editora = {Goos, Gerhard and Hartmanis, Juris and Van Leeuwen, Jan},
+  editoratype = {redactor},
+  date = {2001},
+  volume = {2082},
+  pages = {423--430},
+  publisher = {Springer Berlin Heidelberg},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/3-540-45729-1_44},
+  url = {http://link.springer.com/10.1007/3-540-45729-1_44},
+  urldate = {2024-09-26},
+  isbn = {978-3-540-42245-7 978-3-540-45729-9}
+}
+
 @online{nordicsemiconductorNRF5340SoCProduct,
   title = {{{nRF5340 SoC Product Brief Version}} 2.2},
   author = {{Nordic Semiconductor}},
@@ -1719,14 +1785,14 @@
 
 @book{orhanMicrocomputedTomographyMicroCT2020,
   title = {Micro-Computed {{Tomography}} (Micro-{{CT}}) in {{Medicine}} and {{Engineering}}},
-  editor = {Orhan, Kaan},
+  author = {Orhan, Kaan},
   date = {2020},
   publisher = {Springer International Publishing},
   location = {Cham},
   doi = {10.1007/978-3-030-16641-0},
   url = {https://link.springer.com/10.1007/978-3-030-16641-0},
   urldate = {2024-09-22},
-  isbn = {978-3-030-16640-3 978-3-030-16641-0},
+  isbn = {978-3-030-16640-3},
   langid = {english}
 }
 
@@ -1761,6 +1827,20 @@
   url = {https://linkinghub.elsevier.com/retrieve/pii/S1120179721003379},
   urldate = {2023-09-23},
   langid = {english}
+}
+
+@book{peddieHistoryVisualMagic2013,
+  title = {The History of Visual Magic in Computers: How Beautiful Images Are Made in {{CAD}}, {{3D}}, {{VR}} and {{AR}}},
+  shorttitle = {The History of Visual Magic in Computers},
+  author = {Peddie, Jon},
+  date = {2013},
+  publisher = {Springer},
+  location = {London ; New York},
+  abstract = {If you have ever looked at a fantastic adventure or science fiction movie, or an amazingly complex and rich computer game, or a TV commercial where cars or gas pumps or biscuits behaved liked people and wondered, "How do they do that?", then you've experienced the magic of 3D worlds generated by a computer. 3D in computers began as a way to represent automotive designs and illustrate the construction of molecules. 3D graphics use evolved to visualizations of simulated data and artistic representations of imaginary worlds. In order to overcome the processing limitations of the computer, graphics had to exploit the characteristics of the eye and brain, and develop visual tricks to simulate realism. The goal is to create graphics images that will overcome the visual cues that cause disbelief and tell the viewer this is not real. Thousands of people over thousands of years have developed the building blocks and made the discoveries in mathematics and science to make such 3D magic possible, and The History of Visual Magic in Computers is dedicated to all of them and tells a little of their story. It traces the earliest understanding of 3D and then foundational mathematics to explain and construct 3D; from mechanical computers up to today's tablets. Several of the amazing computer graphics algorithms and tricks came of periods where eruptions of new ideas and techniques seem to occur all at once. Applications emerged as the fundamentals of how to draw lines and create realistic images were better understood, leading to hardware 3D controllers that drive the display all the way to stereovision and virtual reality},
+  isbn = {978-1-4471-4931-6},
+  pagetotal = {448},
+  keywords = {Computer graphics,Digital techniques,History,Image processing,Three-dimensional imaging},
+  annotation = {OCLC: ocn825558630}
 }
 
 @article{percianoInsight3DMicroCT2017,
@@ -1856,7 +1936,7 @@
   volume = {39},
   number = {10},
   pages = {6332--6338},
-  issn = {0094-2405, 2473-4209},
+  issn = {0094-2405},
   doi = {10.1118/1.4754659},
   url = {https://aapm.onlinelibrary.wiley.com/doi/10.1118/1.4754659},
   urldate = {2023-10-24},
@@ -1880,6 +1960,20 @@
   abstract = {Abstract             Characterization of brain infarct lesions in rodent models of stroke is crucial to assess stroke pathophysiology and therapy outcome. Until recently, the analysis of brain lesions was performed using two techniques: (1) histological methods, such as TTC (Triphenyltetrazolium chloride), a time-consuming and inaccurate process; or (2) MRI imaging, a faster, 3D imaging method, that comes at a high cost. In the last decade, high-resolution micro-CT for 3D sample analysis turned into a simple, fast, and cheaper solution. Here, we successfully describe the application of brain contrasting agents (Osmium tetroxide and inorganic iodine) for high-resolution micro-CT imaging for fine location and quantification of ischemic lesion and edema in mouse preclinical stroke models. We used the~intraluminal transient MCAO (Middle Cerebral Artery Occlusion) mouse stroke model to identify and quantify ischemic lesion and edema, and segment core and penumbra regions at different time points after ischemia, by manual and automatic methods. In the transient-ischemic-attack (TIA) mouse model, we can quantify striatal myelinated fibers degeneration. Of note, whole brain 3D reconstructions allow brain atlas co-registration, to identify the affected brain areas, and correlate them with functional impairment. This methodology proves to be a breakthrough in the field, by providing a precise and detailed assessment of stroke outcomes in preclinical animal studies.},
   langid = {english},
   file = {/home/ro/Zotero/storage/YVVIRNGC/Pinto et al. - 2022 - High-resolution micro-CT for 3D infarct characteri.pdf}
+}
+
+@book{platzerTaschenatlasAnatomieBd2013,
+  title = {Taschenatlas Anatomie. Bd. 1: Bewegungsapparat / Werner Platzer},
+  shorttitle = {Taschenatlas Anatomie. Bd. 1},
+  author = {Platzer, Werner},
+  date = {2013},
+  edition = {11., überarb. Aufl},
+  publisher = {Thieme},
+  location = {Stuttgart},
+  isbn = {978-3-13-492011-6},
+  langid = {german},
+  pagetotal = {467},
+  file = {/home/ro/Zotero/storage/H356JIA7/Platzer - 2013 - Taschenatlas Anatomie. Bd. 1 Bewegungsapparat  W.pdf}
 }
 
 @incollection{postonDosimetry2003,
@@ -1949,6 +2043,22 @@
   isbn = {978-1-72817-213-2}
 }
 
+@article{rammeAutomatedBoneSegmentation2017,
+  title = {Automated {{Bone Segmentation}} and {{Surface Evaluation}} of a {{Small Animal Model}} of {{Post-Traumatic Osteoarthritis}}},
+  author = {Ramme, Austin J. and Voss, Kevin and Lesporis, Jurinus and Lendhey, Matin S. and Coughlin, Thomas R. and Strauss, Eric J. and Kennedy, Oran D.},
+  date = {2017-05},
+  journaltitle = {Annals of Biomedical Engineering},
+  shortjournal = {Ann Biomed Eng},
+  volume = {45},
+  number = {5},
+  pages = {1227--1235},
+  issn = {0090-6964, 1573-9686},
+  doi = {10.1007/s10439-017-1799-3},
+  url = {http://link.springer.com/10.1007/s10439-017-1799-3},
+  urldate = {2024-09-26},
+  langid = {english}
+}
+
 @article{redenteApplicationspecificApproachesMicroCT2023,
   title = {Application-Specific Approaches to {{MicroCT}} for Evaluation of Mouse Models of Pulmonary Disease},
   author = {Redente, Elizabeth F. and Kopf, Katrina W. and Bahadur, Ali N. and Robichaud, Annette and Lundblad, Lennart K. and McDonald, Lindsay T.},
@@ -1977,7 +2087,7 @@
   volume = {13},
   number = {1},
   pages = {531--552},
-  issn = {1523-9829, 1545-4274},
+  issn = {1523-9829},
   doi = {10.1146/annurev-bioeng-071910-124717},
   url = {https://www.annualreviews.org/doi/10.1146/annurev-bioeng-071910-124717},
   urldate = {2024-09-21},
@@ -2031,6 +2141,24 @@
   abstract = {Abstract             The gold-standard of preclinical micro-computed tomography (μCT) data processing is still manual delineation of complete organs or regions by specialists. However, this method is time-consuming, error-prone, has limited reproducibility, and therefore is not suitable for large-scale data analysis. Unfortunately, robust and accurate automated whole body segmentation algorithms are still missing. In this publication, we introduce a database containing 225 murine 3D whole body μCT scans along with manual organ segmentation of most important organs including heart, liver, lung, trachea, spleen, kidneys, stomach, intestine, bladder, thigh muscle, bone, as well as subcutaneous tumors. The database includes native and contrast-enhanced, regarding spleen and liver, μCT data. All scans along with organ segmentation are freely accessible at the online repository Figshare. We encourage researchers to reuse the provided data to evaluate and improve methods and algorithms for accurate automated organ segmentation which may reduce manual segmentation effort, increase reproducibility, and even reduce the number of required laboratory animals by reducing a source of variability and having access to a reliable reference group.},
   langid = {english},
   file = {/home/ro/Zotero/storage/HRV56RTS/Rosenhain et al. - 2018 - A preclinical micro-computed tomography database i.pdf}
+}
+
+@article{ruberteBridgingMouseHuman2023,
+  title = {Bridging Mouse and Human Anatomies; a Knowledge-Based Approach to Comparative Anatomy for Disease Model Phenotyping},
+  author = {Ruberte, Jesús and Schofield, Paul N. and Sundberg, John P. and Rodriguez-Baeza, Alfonso and Carretero, Ana and McKerlie, Colin},
+  date = {2023-09},
+  journaltitle = {Mammalian Genome},
+  shortjournal = {Mamm Genome},
+  volume = {34},
+  number = {3},
+  pages = {389--407},
+  issn = {0938-8990, 1432-1777},
+  doi = {10.1007/s00335-023-10005-4},
+  url = {https://link.springer.com/10.1007/s00335-023-10005-4},
+  urldate = {2024-09-27},
+  abstract = {Abstract             The laboratory mouse is the foremost mammalian model used for studying human diseases and is closely anatomically related to humans. Whilst knowledge about human anatomy has been collected throughout the history of mankind, the first comprehensive study of the mouse anatomy was published less than 60~years ago. This has been followed by the more recent publication of several books and resources on mouse anatomy. Nevertheless, to date, our understanding and knowledge of mouse anatomy is far from being at the same level as that of humans. In addition, the alignment between current mouse and human anatomy nomenclatures is far from being as developed as those existing between other species, such as domestic animals and humans. To close this gap, more in depth mouse anatomical research is needed and it will be necessary to extent and refine the current vocabulary of mouse anatomical terms.},
+  langid = {english},
+  file = {/home/ro/Zotero/storage/YBC8QST5/Ruberte et al. - 2023 - Bridging mouse and human anatomies; a knowledge-based approach to comparative anatomy for disease mo.pdf}
 }
 
 @book{ruberteMorphologicalMousePhenotyping2017,
@@ -2113,7 +2241,7 @@
   volume = {193},
   number = {05},
   pages = {559--573},
-  issn = {1438-9029, 1438-9010},
+  issn = {1438-9029},
   doi = {10.1055/a-1290-8070},
   url = {http://www.thieme-connect.de/DOI/DOI?10.1055/a-1290-8070},
   urldate = {2024-09-12},
@@ -2300,12 +2428,6 @@
   langid = {english}
 }
 
-@article{sunderlandFractionalLabelmapRepresentation2017,
-  title = {Fractional Labelmap Representation of Anatomical Structures},
-  author = {Sunderland, Kyle Remington},
-  date = {2017}
-}
-
 @inproceedings{sunderlandFractionalLabelmapsComputing2017,
   title = {Fractional Labelmaps for Computing Accurate Dose Volume Histograms},
   author = {Sunderland, Kyle and Pinter, Csaba and Lasso, Andras and Fichtinger, Gabor},
@@ -2315,7 +2437,7 @@
   location = {Orlando, Florida, United States},
   doi = {10.1117/12.2254978},
   url = {http://proceedings.spiedigitallibrary.org/proceeding.aspx?doi=10.1117/12.2254978},
-  urldate = {2024-09-24},
+  urldate = {2024-09-26},
   eventtitle = {{{SPIE Medical Imaging}}}
 }
 
@@ -2487,12 +2609,10 @@
   volume = {33},
   number = {1},
   pages = {99--110},
-  issn = {0897-1889, 1618-727X},
   doi = {10.1007/s10278-019-00239-7},
   url = {http://link.springer.com/10.1007/s10278-019-00239-7},
   urldate = {2024-02-05},
-  langid = {english},
-  file = {/home/ro/Zotero/storage/MYATLPQ3/Virzì et al. - 2020 - Comprehensive Review of 3D Segmentation Software T.pdf}
+  langid = {english}
 }
 
 @software{voitLaTeXKOMAtemplate2022,
@@ -2516,6 +2636,36 @@
   keywords = {Computers and civilization,Internet,Mass media,Telecommunication}
 }
 
+@incollection{warfieldFractionalSegmentationWhite1999,
+  title = {Fractional {{Segmentation}} of {{White Matter}}},
+  booktitle = {Medical {{Image Computing}} and {{Computer-Assisted Intervention}} – {{MICCAI}}’99},
+  author = {Warfield, Simon K. and Westin, Carl-Fredrik and Guttmann, Charles R. G. and Albert, Marilyn and Jolesz, Ferenc A. and Kikinis, Ron},
+  editor = {Taylor, Chris and Colchester, Alain},
+  editora = {Goos, Gerhard and Hartmanis, Juris and Van Leeuwen, Jan},
+  editoratype = {redactor},
+  date = {1999},
+  volume = {1679},
+  pages = {62--71},
+  publisher = {Springer Berlin Heidelberg},
+  location = {Berlin, Heidelberg},
+  doi = {10.1007/10704282_7},
+  url = {http://link.springer.com/10.1007/10704282_7},
+  urldate = {2024-09-26},
+  isbn = {978-3-540-66503-8 978-3-540-48232-1},
+  file = {/home/ro/Zotero/storage/NWKVBCRQ/Warfield et al. - 1999 - Fractional Segmentation of White Matter.pdf}
+}
+
+@thesis{weber3DSlicerPlatform2022,
+  title = {{{3D Slicer}} as a Platform for the Automatic Segmentation of Real-Time {{MRI}} Data},
+  author = {Weber, Jonas Levin},
+  date = {2022},
+  institution = {Technische Hochschule Köln},
+  url = {https://elib.dlr.de/187800/},
+  urldate = {2024-09-26},
+  langid = {english},
+  pagetotal = {79}
+}
+
 @article{weberProtonTherapyIntracranial2020,
   title = {Proton {{Therapy}} for {{Intracranial Meningioma}} for the {{Treatment}} of {{Primary}}/{{Recurrent Disease Including Re-Irradiation}}},
   author = {Weber, Damien C. and Bizzocchi, Nicola and Bolsi, Alessandra and Jenkinson, Michael D.},
@@ -2530,6 +2680,18 @@
   urldate = {2023-09-23},
   abstract = {Meningeal tumors represent approximately 10–25\% of primary brain tumors and occur usually in elderly female patients. Most meningiomas are benign (80–85\%) and for symptomatic and/or large tumors, surgery, with or without radiation therapy (RT), has been long established as an effective means of local tumor control. RT can be delivered to inoperable lesions or to those with non-benign histology and for Simpson I–III and IV–V resection. RT can be delivered with photons or particles (protons or carbon ions) in stereotactic or non-stereotactic conditions. Particle therapy delivered for these tumors uses the physical properties of charged carbon ions or protons to spare normal brain tissue (i.e. Bragg peak), with or without or a dose-escalation paradigm for non-benign lesions. PT can substantially decrease the dose delivered to the non-target brain tissues, including but not limited to the hippocampi, optic apparatus or cochlea. Only a limited number of meningioma patients have been treated with PT in the adjuvant or recurrent setting, as well as for inoperable lesions with pencil beam scanning and with protons only. Approximately 500 patients with image-defined or WHO grade I meningioma have been treated with protons. The reported outcome, usually 5-year local tumor control, ranges from 85 to 99\% (median, 96\%). For WHO grade II or III patients, the outcome of only 97 patients has been published, reporting a median tumor local control rate of 52\% (range, 38–71.1). Only 24 recurring patients treated previously with photon radiotherapy and re-treated with PT were reported. The clinical outcome of these challenging patients seems interesting, provided that they presented initially with benign tumors, are not in the elderly category and have been treated previously with conventional radiation dose of photons. Overall, the number of meningioma patients treated or-re-irradiated with this treatment modality is small and the clinical evidence level is somewhat low (i.e. 3b–5). In this review, we detail the results of upfront PT delivered to patients with meningioma in the adjuvant setting and for inoperable tumors. The outcome of meningioma patients treated with this radiation modality for recurrent tumors, with or without previous RT, will also be reviewed.},
   file = {/home/ro/Zotero/storage/C2KYSTFN/Weber et al. - 2020 - Proton Therapy for Intracranial Meningioma for the.pdf}
+}
+
+@inproceedings{weinsteinScanlineSurfacingBuilding2000,
+  title = {Scanline Surfacing: Building Separating Surfaces from Planar Contours},
+  booktitle = {Proceedings {{Visualization}} 2000. {{VIS}} 2000 ({{Cat}}. {{No}}. {{00CH37145}})},
+  author = {Weinstein, David},
+  date = {2000},
+  pages = {283--289},
+  publisher = {IEEE},
+  url = {https://ieeexplore.ieee.org/abstract/document/885706},
+  urldate = {2024-09-27},
+  isbn = {0-7803-6478-3}
 }
 
 @article{xieRetrospectiveLithiumionBatteries2020,
