--- a/includes/shared-preamble-acronyms.tex
+++ b/includes/shared-preamble-acronyms.tex
@@ -29,6 +29,12 @@
 \newacronym{tv}{TV}{total variation regularization}
 \newacronym{hu}{HU}{Houndsfield units}
 \newacronym{ac}{AC}{attenuation coefficient}
+\newacronym{dvh}{DVH}{dose volume histogram}
+\newacronym{ptv}{PTV}{planning target volume}
+\newacronym{oar}{OAR}{organs at risk}
+\newacronym{lut}{LUT}{lookup table}
+\newacronym{roi}{ROI}{region of interest}
+\newacronym{mri}{MRI}{magnetic resonance imaging}
 
 
 % glossaries
@@ -38,6 +44,11 @@
 % \Gls{} -> print term fist letter uppercase
 % \Glspl{} -> print term first letter uppercase & plural
 
+\newglossaryentry{dicom}
+{
+	name=DICOM,
+	description={Digital Imaging and Communications in Medicine}
+}
 \newglossaryentry{isra}
 {
 	name=ISRA,
