--- a/includes/thesis/part01-page1-titlepage.tex
+++ b/includes/thesis/part01-page1-titlepage.tex
@@ -9,28 +9,30 @@
 	\begin{sffamily}
 		\vspace{70pt}
 		{\noindent \linespread{1.3} \color{header-blue} \Huge \textbf{\@title} \par }
-		\vspace{5pt}
-		\begin{center}
-			{\noindent\Large Master's Thesis \par}
-		\end{center}
-		\vspace{5pt}
+		\vspace{10pt}
+		%\begin{center}
+		{\noindent\Large Master's Thesis \par}
+		%\end{center}
+		\vspace{15pt}
 		\hspace{-35mm}
 		\includegraphics[width=18.67cm]{images/titlepage-line.png}
 		\vspace{15pt}
-		\tabto{2cm}Submitted by: \tabto{7cm}\textbf{\@author} \\
-		\tabto{2cm}Matriculation No.: \tabto{7cm}\textbf{\matriculationNumber} \\
+		\tabto{2cm}Submitted by:\tabto{7cm}\textbf{\@author} \\
+		\tabto{2cm}Matriculation No.:\tabto{7cm}\textbf{\matriculationNumber} \\
 		\vspace{15pt}
-		\tabto{2cm}at \tabto{7cm}\textbf{\study}\\
+		\tabto{2cm}at\tabto{7cm}\textbf{\study}\\
 		\tabto{7cm}\textbf{\studyprogram}\\
 		\tabto{7cm}\textbf{\masterdescription}\\
 		\vspace{15pt}
-		\tabto{2cm}Advisor: \tabto{7cm}\textbf{\advisor}
+		\tabto{2cm}Supervisor:\tabto{7cm}\textbf{\advisor}
 
 		\vfill
 
 		\place, \thesisdate
 	\end{sffamily}
+
 \end{titlepage}
+
 \makeatother
 
 %\renewcommand{\arraystretch}{1}
